fix image overflow in box container

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -53,3 +53,7 @@ div.swal2-container {
   background-color: #ffffff !important;
   border: 1px solid #333333 !important;
 }
+
+img {
+  max-width: 100%;
+}
